--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,22 @@
 .App {
 	max-width: 860px;
 	margin: 40px auto;
+	font-family: 'Times New Roman', Times, serif;
 }
-/* button {
-	background: none;
-	border: 2px solid #fff;
+
+button {
+	font-family: 'Times New Roman', Times, serif;
+	border: 2px solid black;
 	padding: 6px 12px;
 	border-radius: 4px;
-	color: #fff;
-	font-weight: bold;
+	color: black;
 	cursor: pointer;
 	font-size: 1em;
-} */
-/* button:hover {
-	background: #c23866;
-	color: #fff;
-} */
+	margin-right: 5px;
+}
+button:hover {
+	background: lightblue;
+}
 .card-grid {
 	margin-top: 40px;
 	display: grid;
