double checked and done css

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
 	max-width: 860px;
-	margin: 40px auto;
+	margin: auto;
 	font-family: 'Times New Roman', Times, serif;
 }
 
@@ -17,9 +17,19 @@ button {
 button:hover {
 	background: lightblue;
 }
+
 .card-grid {
-	margin-top: 40px;
+	margin-top: 20px;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 	grid-gap: 20px;
+}
+
+@media only screen and (max-width: 480px) {
+	.card-grid {
+		margin-top: 10px;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-gap: 10px;
+	}
 }
